# hypergraphx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  CONTRIBUTING.md  LICENSE.md  MANIFEST  README.md  SECURITY.md  main.py  prova.json  prove.py  pyproject.toml  pytest.ini  requirements.txt  requirements_docs.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-publish.yml  tests.yml
docs/: about.rst  conf.py  hnx.communities.core_periphery.rst  hnx.communities.hy_mmsbm.rst  hnx.core.rst  hnx.dynamics.rst  hnx.generation.rst  hnx.linalg.rst  hnx.rst  hnx.viz.rst  index.rst  installation.rst  overview.rst  quickstart.rst  tutorials.rst
docs/_static/: custom.css
docs/api/: hypergraphx.communities.core_periphery.rst  hypergraphx.communities.hy_mmsbm.rst  hypergraphx.communities.hy_sc.rst  hypergraphx.communities.hypergraph_mt.rst  hypergraphx.communities.hyperlink_comm.rst  hypergraphx.communities.rst  hypergraphx.core.rst  hypergraphx.dynamics.rst  hypergraphx.filters.rst  hypergraphx.generation.rst  hypergraphx.linalg.rst  hypergraphx.measures.rst  hypergraphx.motifs.rst  hypergraphx.readwrite.rst  hypergraphx.representations.rst  hypergraphx.rst  hypergraphx.utils.rst  hypergraphx.viz.rst  modules.rst  public_api.rst
docs/tutorials/: activity_driven.ipynb  analysis_paper.ipynb  basics.ipynb  communities.ipynb  conversions.ipynb  directed_measures.ipynb  filters.ipynb  hy_mmsbm_generation.ipynb  motifs.ipynb  random_walk.ipynb  scale_free_generation.ipynb  shortest_paths.ipynb  simplicial_contagion.ipynb  synchronization.ipynb
hnx/: __init__.py
hnx/core/: hypergraph.py  meta_handler.py  multiplex_hypergraph.py  temporal_hypergraph.py
hnx/dynamics/: contagion.py  randwalk.py  synch.py  utils.py
hnx/filters/: __init__.py
hnx/generation/: configuration_model.py  hy_mmsbm_sampling.py  random.py  scale_free.py
hnx/linalg/: linalg.py
hnx/measures/: degree.py  edge_similarity.py  eigen_centralities.py  s_centralities.py  sub_hypergraph_centrality.py
hnx/motifs/: motifs.py  utils.py
hnx/readwrite/: __init__.py  data_to_json.py  load.py  loaders.py  save.py
hnx/representations/: projections.py  simplicial.py
hnx/utils/: __init__.py  cc.py  labeling.py  visits.py
hnx/viz/: __init__.py  draw_communities.py  draw_hypergraph.py  draw_pie.py  draw_projections.py  draw_simplicial.py  plot.py
hoinetx/core/: attribute_handler.py  hypergraph.py  meta_handler.py  multiplex_hypergraph.py  temporal_hypergraph.py
hoinetx/dynamics/: randwalk.py  synch.py  utils.py
hoinetx/filters/: filters.py
hoinetx/generation/: configuration_model.py  hy_mmsbm_sampling.py  random.py  scale_free.py
hoinetx/linalg/: __init__.py  linalg.py
hoinetx/measures/: degree.py  edge_similarity.py  eigen_centralities.py  s_centralities.py  sub_hypergraph_centrality.py
hoinetx/motifs/: motifs.py  utils.py
hoinetx/readwrite/: load.py  save.py
hoinetx/representations/: projections.py  simplicial.py
hoinetx/transform/: projections.py
hoinetx/utils/: cc.py  projections.py  visits.py
hoinetx/viz/: draw_hypergraph.py  draw_projections.py  draw_simplicial.py
hypergraphx/: __init__.py  exceptions.py
hypergraphx/communities/: __init__.py  api.py  results.py
hypergraphx/core/: DirectedHypergraph.py  Hypergraph.py  IHypergraph.py  IUndirectedHypergraph.py  I_hypergraph.py  I_undirected_hypergraph.py  MultiplexHypergraph.py  TemporalHypergraph.py  __init__.py  base.py  base_hypergraph.py  directed.py  directed_hypergraph.py  hypergraph.py  meta_handler.py  multiplex.py  multiplex_hypergraph.py  serialization.py  temporal.py  temporal_hypergraph.py  undirected.py  views.py
hypergraphx/dynamics/: __init__.py  contagion.py  randwalk.py  synch.py  utils.py
hypergraphx/filters/: __init__.py  filters.py  metadata_filters.py  statistical_filters.py
hypergraphx/generation/: GAM.py  __init__.py  _rng.py  activity_driven.py  configuration_model.py  directed_configuration_model.py  hy_mmsbm_sampling.py  random.py  scale_free.py
hypergraphx/linalg/: __init__.py  linalg.py
hypergraphx/measures/: __init__.py  degree.py  edge_similarity.py  eigen_centralities.py  reducibility.py  s_centralities.py  shortest_paths.py  sub_hypergraph_centrality.py
hypergraphx/motifs/: __init__.py  approx_motifs.py  directed_motifs.py  motifs.py  utils.py
hypergraphx/readwrite/: __init__.py  data_to_json.py  hashing.py  hif.py  io_json.py  io_pickle.py  load.py  loaders.py  save.py
hypergraphx/representations/: __init__.py  projections.py  simplicial.py  simplicial_complex.py
hypergraphx/utils/: __init__.py  cc.py  community.py  components.py  edges.py  labeling.py  metadata.py  preprocessing.py  traversal.py  visits.py
hypergraphx/viz/: HypergraphVisualizer.py  IHypergraphVisualizer.py  Object.py  __init__.py  draw_communities.py  draw_hypergraph.py  draw_motifs.py  draw_pie.py  draw_projections.py  draw_simplicial.py  plot.py  (+2 more)
requirements/: dev.txt
tests/: conftest.py  test_imports.py
tutorials/: activity_driven.ipynb  analysis_paper-Copy1.ipynb  analysis_paper.ipynb  basics.ipynb  centrality.ipynb  communities-Copy1.ipynb  communities-Copy2.ipynb  communities-Copy3.ipynb  communities.ipynb  conversions.ipynb  directed_measures.ipynb  filters.ipynb  generation.ipynb  hy_mmsbm_generation.ipynb  motifs.ipynb  random_walk.ipynb  scale_free_generation.ipynb  shortest_paths.ipynb  simplicial_contagion.ipynb  synchronization.ipynb  tutorial_directed.ipynb  visualization.ipynb  visualization_test.ipynb
(+306 files in other folders)
