[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypergraphx"
description = "HGX is a multi-purpose, open-source Python library for higher-order network analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
authors = [{name = "HGX-Team", email = "lotitoqf@gmail.com"}]
keywords = ["hypergraphs", "networks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy",
  "scipy",
  "networkx",
  "pandas",
  "tqdm",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/HGX-Team/hypergraphx"

[project.optional-dependencies]
dev = [
  "pytest",
  "black>=24.3.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "build>=1.2.1",
  "twine>=5.1.1",
  "pre-commit",
]
viz = [
  "matplotlib",
  # optional interactive hover labels in plot_motifs
  "mplcursors",
]
docs = [
  "sphinx",
  "furo",
  "nbsphinx",
  "matplotlib",
  "seaborn",
  "tqdm",
]
ml = [
  "scikit-learn",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", ".github"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>.*)$"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
files = ["hypergraphx"]
